# synavate-utils

./: .env.example  .gitignore  README.md  __STATUS__  __init__.py  main.py  pyproject.toml
.github/workflows/: python-package.yml
config/: config.json  config.py
config/_altlang/: read_config.ts
logHippo/elk-logging/: models.py
mlops/: ci-list.py  creds.py  ml-library-options.yaml  mlops_config.py
models/: utils_models.py
synavate-utils/: ci_cmd_list.py  requirements.txt
synavate-utils/mlops/: __init__.py  creds.py  ml-library-options.yaml
synavate-utils/universal_utils/: __init__.py  exceptions.py  logging_utils.py  sys_utils.py
universal-utils/: __init__.py  exceptions.py  logging_utils.py
universal_utils/: file_utils.py  generate-compose.sh  logging_utils.py  sys_utils.py  time_utils.py  usewithELK.md
