[tool.poetry]
name = "synavate-utils"
version = "0.1.0"
description = "synavate utils"
authors = ["snyata <core@synavate.tech>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tree = "^0.2.4"
uuid = "^1.30"
colorama = "^0.4.6"
ecs-logging = "^2.1.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
